--- a/public/theme.css
+++ b/public/theme.css
@@ -17,7 +17,7 @@ html {
     position: relative;
     
 }
-.dbCol{
+#dbCol{
     padding-left: 10%;
     padding-right: 10%;
     text-align: center;
