--- a/public/theme.css
+++ b/public/theme.css
@@ -7,20 +7,20 @@ html {
 .recordLegend{
     display: flex;
     flex-direction: row;
-    align-items: center;
+    /* align-items: center; */
     justify-content: center;
     padding-top: 1%;
     padding-bottom: 1%;
     margin-right:10%;
     margin-left: 10%;
-    background-color: aqua;
+    /* background-color: aqua; */
     position: relative;
     
 }
 #dbCol{
     padding-left: 10%;
     padding-right: 10%;
-    text-align: center;
+    /* text-align: center; */
     /* padding-left: 2%; */
 }
 
@@ -33,7 +33,19 @@ html {
     padding-bottom: 1%;
     margin-right:7%;
     margin-left: 7%;
-    background-color: aqua;
+    /* background-color: aqua; */
     position: relative;
 
+}
+
+.teams{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-right:7%;
+    margin-left: 7%; 
+}
+.ateam{
+    height: 10em;
+    width: 10em;
 }
